[metadata]
name = threej
version = attr:threej.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = Package for Wigner 3j symbols in pure Python with Numba support
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/threej
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:

[options.extras_require]
docs =
    numpydoc

[options.entry_points]
numba_extensions =
    init = threej.numba:init

[flake8]
ignore = E226
